Complete application update with security, WebSocket, and UI enhancements